Fixed margin on tablet screen size

--- a/cristventcode-static/Content/custom-theme.css
+++ b/cristventcode-static/Content/custom-theme.css
@@ -6,7 +6,7 @@
 
 .lye-cal-image {
     width: 280px;
-    margin-left: 8px;
+    margin-left: 7px;
     margin-top: -20px;
 }
 
@@ -177,35 +177,53 @@ footer {
     font-weight: bold;
 }
 
-@media(min-width: 768px) {
-    .hero-text h1 {
-        font-size: 4rem;
-    }
 
-    .navbar-collapse {
-        background-color: transparent;
-    }
-
-    .navbar {
-        border-radius: 0px;
-    }
-
-    .card-holder {
-        padding-right: 0px;
-    }
-
-    .body-content, .navbar, .navbar-custom {
-        width: 100%;
+@media(min-width: 350px) {
+    .lye-cal-image {
+        margin-left: 28px;
     }
 }
 
-@media(min-width: 1440px) {
-    .body-content, .navbar, .navbar-custom {
-        width: 100%;
-        /*margin: 0px auto;*/
-    }
-
-    .navbar-custom {
-        padding: 0px 45px;
+@media(min-width: 400px) {
+    .lye-cal-image{
+        margin-left: 50px;
     }
 }
+
+
+    @media(min-width: 768px) {
+        .hero-text h1 {
+            font-size: 4rem;
+        }
+
+        .lye-cal-image {
+            margin-left: 7px;
+        }
+
+        .navbar-collapse {
+            background-color: transparent;
+        }
+
+        .navbar {
+            border-radius: 0px;
+        }
+
+        .card-holder {
+            padding-right: 0px;
+        }
+
+        .body-content, .navbar, .navbar-custom {
+            width: 100%;
+        }
+    }
+
+    @media(min-width: 1440px) {
+        .body-content, .navbar, .navbar-custom {
+            width: 100%;
+            /*margin: 0px auto;*/
+        }
+
+        .navbar-custom {
+            padding: 0px 45px;
+        }
+    }
